--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,9 +1,8 @@
 doctype 5
 html
   head
-    title= title
-    link(rel='stylesheet', href='css/library.css')
+    link(rel='stylesheet', href='http://stk.ikanbao.fm:3000/css/library.css')
   body
     block content
 
-  script(src='/handler/1.00/?assets[scripts]=lib/sea$index')
+  script(src='/api/1.00/?assets[scripts]=lib/sea$index')
