--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,8 @@
 doctype 5
-html
+html(lang='en')
   head
-    link(rel='stylesheet', href='http://stk.ikanbao.fm:3000/css/library.css')
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    link(rel='stylesheet', href='//stk.ikanbao.fm:3000/css/bootstrap.css')
   body
     block content
 
