--- a/views/register.jade
+++ b/views/register.jade
@@ -1,1 +1,14 @@
 extend shared/skeleton
+
+block append head
+
+	style
+
+		body {
+			position:relative;
+		}
+
+block append content
+
+	//div.reg-container.container
+		
