--- a/views/shared/header.jade
+++ b/views/shared/header.jade
@@ -74,17 +74,17 @@ div.header
               span.caret
             ul.dropdown-menu
               li
-                a 发表
+                a(href='/yorkie/post/') 发表
               li
-                a 个人中心
+                a(href='/yorkie/') 个人中心
               li
                 a 主编中心
               li.divider
               li
-                a 设置
+                a(href='/settings/') 设置
               li.hidden-desktop
-                a 退出
+                a(href='/logout/') 退出
           div.btn-group
-            a.btn.btn-danger.hidden-tablet
+            a.btn.btn-danger.hidden-tablet(href='/logout/')
               i.icon-off.icon-white
 
