--- a/views/shared/header.jade
+++ b/views/shared/header.jade
@@ -50,9 +50,9 @@ div.header
     div.row
       div.span6.offset1
         div.header-phoneNavbar.btn-group.visible-phone
-          a.btn.btn-large(href='#') 发现
-          a.btn.btn-large(href='#') 首页
-          a.btn.btn-large(href='#') 设置
+          a.btn.btn-large(href='/magazineEye/') 发现
+          a.btn.btn-large(href='/') 首页
+          a.btn.btn-large(href='/settings/') 设置
         div.hidden-phone
           a.header-logo.pull-left.hidden-tablet(href='/')
             img(data-src='holder.js/170x30')
