--- a/views/welcomeAuthenticated.jade
+++ b/views/welcomeAuthenticated.jade
@@ -14,7 +14,11 @@ block append head
       padding-top: 15px;
     }
 
-    
+    .home-sidebar .nav {
+      width: 104px;
+    }
+
+
     @media (min-width: 1200px) {
       .home-sidebar .nav {
         width: 170px;
