--- a/views/register.jade
+++ b/views/register.jade
@@ -43,7 +43,7 @@ block append content
 						| 重复输入密码
 						input(type='password')
 					p
-						button.btn.btn-success(type='submit') 创建帐号
+						button.btn.btn-success.btn-large(type='submit') 创建帐号
 
 			div.span6.offset1.hidden-phone
 				img(data-src='holder.js/570x320')
