--- a/views/login.jade
+++ b/views/login.jade
@@ -53,6 +53,6 @@ block append content
           input(type='password', name=passwordFormFieldName, placeholder='密码')
         p
           div.btn-group
-            button#submit.btn.btn-success 登陆
+            button#submit.btn.btn-success.btn-large 登陆
           div.btn-group
             button.btn.visible-phone 免费注册
