--- a/views/shared/header.jade
+++ b/views/shared/header.jade
@@ -69,7 +69,7 @@ div.header
           div.btn-group
             a.btn(href='#')
               i.icon-user.icon-gray
-              =user.nickname
+              =user.nick
             a.btn.dropdown-toggle(data-toggle='dropdown')
               span.caret
             ul.dropdown-menu
