--- a/views/register.jade
+++ b/views/register.jade
@@ -32,10 +32,10 @@ block append content
 					legend 新建个人帐户
 					label
 						| 用户名
-						input(tabindex='1', type='text', name='username', value='')
+						input(tabindex='1', type='text', name='username', value='', placeholder='请输入用户名')
 					label
 						| 电子邮箱
-						input(tabindex='2', type='text', name=loginFormFieldName, value='')
+						input(tabindex='2', type='text', name=loginFormFieldName, value='', placeholder='example@gmail.com')
 					label
 						| 密码
 						input(tabindex='3', type='password', name=passwordFormFieldName, value='')
