--- a/views/register.jade
+++ b/views/register.jade
@@ -32,7 +32,7 @@ block append content
 					legend 新建个人帐户
 					label
 						| 用户名
-						input(tabindex='1', type='text', name='username', value='', placeholder='请输入用户名')
+						input(tabindex='1', type='text', name='name', value='', placeholder='请输入用户名')
 					label
 						| 电子邮箱
 						input(tabindex='2', type='text', name=loginFormFieldName, value='', placeholder='example@gmail.com')
