--- a/views/register.jade
+++ b/views/register.jade
@@ -41,7 +41,7 @@ block append content
 						input(tabindex='3', type='password', name=passwordFormFieldName, value='')
 					label
 						| 重复输入密码
-						input(tabindex='4', type='password', name='comfirmPassword', value='')
+						input(tabindex='4', type='password', name='confirmPassword', value='')
 					p
 						button.btn.btn-success.btn-large(tabindex='5', type='submit') 创建帐号
 
