--- a/views/welcomeAuthenticated.jade
+++ b/views/welcomeAuthenticated.jade
@@ -43,7 +43,7 @@ block append content
           li.active
             a(href='/')
               i.icon-home.icon-white.pull-right
-              | yorkie
+              =user.name
           li
             a(href='/history/')
               i.icon-book.pull-right
