tweak the modular templates

--- a/views/register.jade
+++ b/views/register.jade
@@ -1,6 +1,6 @@
 extend shared/skeleton
 
-block append head
+block append Head
 
 	style
 
@@ -17,7 +17,7 @@ block append head
 			}
 		}
 
-block append content
+block append Content
 
 	div.reg-container.container
 		div.row
