--- a/views/welcome.jade
+++ b/views/welcome.jade
@@ -3,7 +3,7 @@
 extend shared/skeleton
 
 
-block append head
+block append Head
   
   style
 
@@ -22,7 +22,7 @@ block append head
       }
     }
 
-block append content
+block append Content
 
   div.welcome-container.container
     div.row-fluid
