--- a/views/login.jade
+++ b/views/login.jade
@@ -1,6 +1,6 @@
 extend shared/skeleton
 
-block append head
+block append Head
   
   style
 
@@ -39,7 +39,7 @@ block append head
 
 
 
-block append content
+block append Content
 
   div.login-container.container
     form.login-form(method='post', action='/login/')
@@ -47,10 +47,10 @@ block append content
         legend 登陆{AppName}
         label  
           | 用户名/电子邮箱
-          input(type='text', name=loginFormFieldName, placeholder='请输入用户名')
+          input(type='text', name=loginFormFieldName, placeholder='请输入用户名', tabindex='1')
         label  
           | 密码 
-          input(type='password', name=passwordFormFieldName, placeholder='密码')
+          input(type='password', name=passwordFormFieldName, placeholder='密码', tabindex='2')
         p
           div.btn-group
             button#submit.btn.btn-success.btn-large 登陆
