--- a/views/shared/skeleton.jade
+++ b/views/shared/skeleton.jade
@@ -2,14 +2,14 @@ doctype 5
 html
   
   head
-    block head
+    block Head
       meta(name='viewport', content='width=device-width, initial-scale=1.5')
       link(rel='stylesheet', href='//stk.ikanbao.fm:3000/css/bootstrap.css')
       link(rel='stylesheet', href='//stk.ikanbao.fm:3000/css/bootstrap-responsive.css')
       title login
 
   body
-    block content
+    block Content
       include header
 
     script(src='/scripts/lib/sea.js', data-main='/scripts/index')
