--- a/views/shared/header.jade
+++ b/views/shared/header.jade
@@ -76,7 +76,7 @@ div.header
               li
                 a(href='/#{user.name}/post/') 发表
               li
-                a(href='/#{user.name}/') 个人中心
+                a(href='/#{user.name}/') 个人主页
               li
                 a 主编中心
               li.divider
@@ -87,4 +87,5 @@ div.header
           div.btn-group
             a.btn.btn-danger.hidden-tablet(href='/logout/')
               i.icon-off.icon-white
+
 
