--- a/views/settings.jade
+++ b/views/settings.jade
@@ -31,7 +31,7 @@ block append content
 			a.btn 重置
 			a.btn 修改密码
 		.btn-group
-			a.btn.btn-danger(href='#destoryAccountModal', role='button', data-toggle='modal') 销毁帐号
+			a.btn.btn-danger(href='#destoryAccountModal', role='button', data-toggle='modal', tabindex='-1') 销毁帐号
 
 	// 销毁帐号的Modal
 	#destoryAccountModal.modal.hide.fade(tabindex='-1', role='dialog', aria-labelledby='', aria=hidden='true')
