--- a/views/shared/header.jade
+++ b/views/shared/header.jade
@@ -74,14 +74,14 @@ div.header
               span.caret
             ul.dropdown-menu
               li
-                a(href='/post/#issue') 发布文章
+                a(href='/post/kan') 创刊
               li
-                a(href='/post/#kan') 创刊
+                a(href='/post/issue') 发布文章
               li.divider
               li
                 a(href='/#{user.name}/') 个人主页
               li
-                a(href='/#{user.name}/#kans') 我的报纸
+                a(href='/#{user.name}/#kans') 我的报刊
               li
                 a(href='/#{user.name}/#mysubscribe') 我的订阅
               li.divider
