--- a/views/shared/header.jade
+++ b/views/shared/header.jade
@@ -76,7 +76,7 @@ div.header
               li
                 a(href='/post/kan') 创刊
               li
-                a(href='/post/issue') 发布文章
+                a(href='/post/issue') 发布
               li.divider
               li
                 a(href='/#{user.name}/') 个人主页
