--- a/views/shared/header.jade
+++ b/views/shared/header.jade
@@ -74,7 +74,7 @@ div.header
               span.caret
             ul.dropdown-menu
               li
-                a(href='/post/kan') 创刊
+                a(href='/post/kan') 创刊(副刊)
               li
                 a(href='/post/issue') 发布
               li.divider
