--- a/views/post_kan.jade
+++ b/views/post_kan.jade
@@ -76,7 +76,8 @@ block append Content
 					button.close(type='button', data-dismiss='modal') x
 					h3 上传封面
 				.modal-body
-					
+					button.btn.btn-large 选择文件
+						#CoverUploadButton
 				.modal-footer
 					button.btn(data-dismiss='modal') 关闭
 					button.btn.btn-primary 保存
