--- a/views/post_kan.jade
+++ b/views/post_kan.jade
@@ -36,7 +36,7 @@ block append Content
 					.input-prepend
 						span.add-on
 							i.icon-tags
-						input#kanTags.span5(type='text', value='', placeholder='报刊标签')
+						input#kanTags.span5(type='text', value='', placeholder='添加标签')
 			
 			.control-group
 				label.control-label(for='kanDescription') 描述
