--- a/views/post_kan.jade
+++ b/views/post_kan.jade
@@ -55,9 +55,9 @@ block append Content
 
 			.control-group.buttons
 				.btn-group
-					a#preview.btn.btn-large 预览
+					a#preview.btn.btn-large(data-loading-text='loading.') 预览
 				.btn-group
-					a#submit.btn.btn-success.btn-large 创建
+					a#submit.btn.btn-success.btn-large(data-loading-text='正在创建') 创建
 
 			//- 添加描述
 			#descriptionModal.modal.hide.fade
