--- a/views/user_homepage.jade
+++ b/views/user_homepage.jade
@@ -12,7 +12,7 @@ block append Content
 		.homepage-info.span6
 			h1=host.name
 
-		.homepage-nav.navbar.span6
+		.homepage-nav.navbar.span9
 			.navbar-inner
 				ul.nav
 					li.active
@@ -23,6 +23,9 @@ block append Content
 						a(href='#subscribe') Ta的订阅
 					li
 						a(href='#more') 更多
+
+		.homepage-pic
+			img.img-polaroid(data-src='holder.js/168x168')
 
 
 	.homepage-content.container
