--- a/views/user_homepage.jade
+++ b/views/user_homepage.jade
@@ -21,9 +21,9 @@ block append Content
 					li.active
 						a(href='/#{host.name}/') 个人信息
 					li
-						a(href='/#{host.name}/#kan') Ta的报刊
+						a(href='/#{host.name}/kan') Ta的报刊
 					li
-						a(href='/#{host.name}/#subscribe') Ta的订阅
+						a(href='/#{host.name}/subscribe') Ta的订阅
 					li.dropdown
 						a.dropdown-toggle(href='#', data-toggle='dropdown')
 							| 更多
