--- a/views/shared/header.jade
+++ b/views/shared/header.jade
@@ -81,9 +81,9 @@ div.header
               li
                 a(href='/#{user.name}/') 个人主页
               li
-                a(href='/#{user.name}/#kans') 我的报刊
+                a(href='/#{user.name}/kan') 我的报刊
               li
-                a(href='/#{user.name}/#mysubscribe') 我的订阅
+                a(href='/#{user.name}/mysubscribe') 我的订阅
               li.divider
               li
                 a(href='/settings/') 设置
