--- a/views/login.jade
+++ b/views/login.jade
@@ -44,7 +44,7 @@ block append Content
   div.login-container.container
     form.login-form(method='post', action='/login/')
       fieldset
-        legend 登陆{AppName}
+        legend 登陆爱看报
         label  
           | 用户名/电子邮箱
           input(type='text', name=loginFormFieldName, placeholder='请输入用户名', tabindex='1')
