--- a/views/shared/sidebar-and-content.jade
+++ b/views/shared/sidebar-and-content.jade
@@ -16,28 +16,28 @@ block append Content
 		.row
 			.home-sidebar.span2.offset1.hidden-phone
 				ul#home-sidebar.nav.nav-pills.nav-stacked
-					li.active
+					li
 						a(href='/')
-							i.icon-home.icon-white.pull-right
+							i.icon-home.pull-right
 							=user.name
 					li#history
-						a(href='/history/')
+						a(href='/history')
 							i.icon-book.pull-right
 							| 历史记录
 					li#groups
-						a(href='/groups/')
+						a(href='/groups')
 							i.icon-th-list.pull-right
 							| 分类
 					li#discovery
-						a(href='/magazineEye/')
+						a(href='/magazineEye')
 							i.icon-eye-open.pull-right
 							| 发现
 					li#subscribe
-						a(href='/subscribe/')
+						a(href='/subscribe')
 							i.icon-hdd.pull-right
 							| 订阅
 					li#settings
-						a(href='/settings/')
+						a(href='/settings')
 							i.icon-wrench.pull-right
 							| 设置
 
