--- a/views/shared/skeleton.jade
+++ b/views/shared/skeleton.jade
@@ -8,6 +8,9 @@ html
       link(rel='stylesheet', href='//stk.ikanbao.fm:3000/css/bootstrap-responsive.css')
       title login
 
+      script
+        var ENV = {}
+
   body
     block Content
       include header
