--- a/views/shared/skeleton.jade
+++ b/views/shared/skeleton.jade
@@ -15,7 +15,6 @@ html
     block Content
       include header
 
-    script(src='/scripts/lib/sea.js')
-    script(src='/scripts/sea-config.js')
+    script(src='/scripts/?sea.js&sea-config.js&plugins/plugin-combo.js')
     block Module
       script(src='/scripts/index.js')
