--- a/views/post_issue.jade
+++ b/views/post_issue.jade
@@ -20,7 +20,7 @@ block append Content
 						| 欢迎使用
 				.issue-btns
 					.btn-group
-						a.btn 取消
+						a.btn(href='/#{user.name}/kan') 取消
 					.btn-group.pull-right
 						a.btn.btn-success 发布
 					.btn-group.pull-right
