--- a/views/post_issue.jade
+++ b/views/post_issue.jade
@@ -21,9 +21,9 @@ block append Content
 				.issue-btns
 					.btn-group
 						a.btn(href='/#{user.name}/kan') 取消
-					.btn-group.pull-right
+					#post-btn.btn-group.pull-right
 						a.btn.btn-success 发布
-					.btn-group.pull-right
+					#preview-btn.btn-group.pull-right
 						a.btn 预览
 
 			.sidebar.span3
