--- a/views/shared/sidebar-and-content.jade
+++ b/views/shared/sidebar-and-content.jade
@@ -64,3 +64,6 @@ block append Content
 							temp2.className = temp2.className + ' icon-white'
 						)
 				}
+
+block Module
+	script(src='/scripts/sidebar-and-content.js')
