--- a/views/shared/skeleton.jade
+++ b/views/shared/skeleton.jade
@@ -6,7 +6,7 @@ html
       meta(name='viewport', content='width=device-width, initial-scale=1.5')
       link(rel='stylesheet', href='//stk.ikanbao.fm:3000/css/bootstrap.css')
       link(rel='stylesheet', href='//stk.ikanbao.fm:3000/css/bootstrap-responsive.css')
-      title login
+      title= page.title
 
       script
         var ENV = {}
@@ -17,4 +17,4 @@ html
 
     script(src='/scripts/?sea.js&sea-config.js&plugins/plugin-combo.js')
     block Module
-      script(src='/scripts/index.js')
+      script(src='/scripts/default.js')
